[metadata]
name = loadforecast
version = 0.0.2
author = Marek Wadinger
author_email = marekwadinger5506@gmail.com
description = A package for easy time series forecasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarekWadinger//sampleproject
project_urls =
    Bug Tracker = https://github.com/MarekWadinger/loadforecast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src